--- a/CSS/produtos.css
+++ b/CSS/produtos.css
@@ -34,5 +34,73 @@ nav a {
     font-size: 22px;
     text-decoration: none;
    
+}
+
+nav a:hover {
+
+color: #c78c19;
+text-decoration: underline;
+}
+
+.produtos li {
+
+    display: inline-block;
+    text-align: center;
+    width: 30%;
+    vertical-align: top;
+    margin: 0 1.5%;
+    padding: 30px 20px;
+    box-sizing: border-box;
+    border-color: #000000;
+    border-width: 2px;
+    border-style: solid;
+    /* border: 2px solid #000000; (pode ser assim também) */
+    border-radius: 10px;
+
+}
+
+.produtos li:hover {
+
+    border-color: #c78c19;
+
+}
+
+.produtos li:active {
+
+    border-color: #088c19;
+
+}
+
+.produtos li:hover h2 {
+
+    font-size: 34px;
+
+}
+
+.produtos {
+
+    width: 940px;
+    margin: 0 auto;
+    padding: 50px 0;
+
+}
+
+.produtos h2 {
+
+    font-size: 30px;
+    font-weight: bold;
+
+}
+
+.produto-descricao {
+
+    font-size: 18px;
+}
+
+.preco-produto {
+
+    font-size: 22px;
+    font-weight: bold;
+    margin: 10px 0 0;
 
 }
