--- a/CSS/produtos.css
+++ b/CSS/produtos.css
@@ -104,3 +104,20 @@ text-decoration: underline;
     margin: 10px 0 0;
 
 }
+
+footer {
+
+    text-align: center;
+    background: #211e1e;
+    /* background: url("imagens/bg.jpg"); */
+    padding: 40px 0;
+
+}
+
+.copyright {
+
+    color: #ffffff;
+    font-size: 13;
+    margin: 20px 0 0;
+
+}
