--- a/CSS/style.css
+++ b/CSS/style.css
@@ -68,3 +68,15 @@ ul {
     width: 50%;
 }
 
+footer {
+    text-align: center;
+    background-image: url(../imagens/bg.jpg);
+    padding: 40px 0;
+}
+
+.copyright {
+
+    font-size: 15;
+    color: white;
+    margin: 20px 0 0;
+}
