--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,71 +1,329 @@
+body {
+
+    font-family: 'Montez', cursive;
+
+}
+
+header {
+
+	background: #BBBBBB;
+	padding: 20px 0;
+
+}
+
+.caixa {
+
+	position: relative;
+	width: 940px;
+	margin: 0 auto;
+
+}
+
+nav {
+
+	position: absolute;
+	top: 110px;
+	right: 0;
+
+}
+
+nav li {
+
+	display: inline;
+	margin: 0 0 0 15px;
+
+}
+
+nav a {
+
+	text-transform: uppercase;
+	color: #000000;
+	font-weight: bold;
+	font-size: 32px;
+	text-decoration: none;
+
+}
+
+nav a:hover {
+
+	color: #C78C19;
+	text-decoration: underline;
+
+}
+
+.produtos {
+
+	width: 940px;
+	margin: 0 auto;
+	padding: 50px 0;
+
+}
+
+.produtos li {
+
+	display: inline-block;
+	text-align: center;
+	width: 30%;
+	vertical-align: top;
+	margin: 0 1.5%;
+	padding: 30px 20px;
+	box-sizing: border-box;
+	border: 2px solid #000000;
+	border-radius: 10px;
+
+}
+
+.produtos li:hover {
+
+	border-color: #C78C19;
+
+}
+
+.produtos li:active {
+
+	border-color: #088C19;	
+
+}
+
+.produtos li:hover h2 {
+
+	font-size: 44px;
+
+}
+
+.produtos h2 {
+
+	font-size: 40px;
+	font-weight: bold;
+
+}
+
+.produto-descricao {
+
+	font-size: 28px;
+
+}
+
+.produto-preco {
+
+	font-size: 32px;
+	font-weight: bold;
+	margin-top: 10px;
+
+}
+
+footer {
+
+	text-align: center;
+	background: url("bg.jpg");
+	padding: 40px 0;
+
+}
+
+.copyright {
+
+	color: #FFFFFF;
+	font-size: 23px;
+	margin: 20px 0 0;
+
+}
+
+main {
+
+	
+
+}
+
+form {
+
+	margin: 40px 0;
+
+}
+
+form label, form legend {
+
+	display:block;
+	font-size: 30px;
+	margin: 0 0 10px;
+
+}
+
+.input-padrao {
+
+	display: block;
+	margin: 0 0 20px;
+	padding: 10px 25px;
+	width: 50%;
+
+}
+
+.checkbox {
+
+	margin: 20px 0;
+
+}
+
+.enviar {
+
+	width:40%;
+	padding: 15px 0;
+	background: orange;
+	color: white;
+	font-weight: bold;
+	font-size: 28px;
+	border: none;
+	border-radius: 5px;
+	transition: 1s all;
+	cursor: pointer;
+
+}
+
+.enviar:hover {
+
+	background: darkorange;
+	transform: scale(1.2);
+
+}
+
+table {
+
+	margin: 20px 0 40px;
+
+}
+
+thead {
+
+	background: #555555;
+	color: white;
+	font-weight: bold;
+
+}
+
+td, th {
+
+	border: 1px solid #000000;
+	padding: 8px 15px;
+
+}
 
 
-#banner{
+/* css da página inicial */
+.banner {
+	width:100%;
+}
 
-    width: 100%;
-    text-align: center;
+.titulo-principal {
+	text-align: center;
+	font-size: 3em; /* 2em significa 2x o tamanho da fonte padrão*/
+	margin: 0 0 1em;
+	clear: left; /*limpar o float do .utensilios (o float interfere em todos os elementos entao so para ficar na imagem temos que limpar ele nos outros) */
+	/*color: rgb(red, green, blue); transformar em rgb*/
+	color: rgba(0, 0, 0, 0.6); /*para opacificar (pode  ser usado em qualqer elemento*/
+
+}
+
+/* .titulo-principal:first-letter { /*primeira letra em negrito*/
+
+	/* font-weight: bold; */
+
+/*} */ 
+
+/* .titulo-principal:before { eles criam um espaço onde o css pode ser usado antes do elemento
+
+	content: "[ "; entre aspas o que queremos colocar
+} */
+
+/* .titulo-principal:after {
+
+	content: " ]";
+} */
+
+p:first-line {  /*primeira linha em Italico*/
+
+	font-style: italic;
+
 }
 
 .principal {
 
-    background-color: #cccccc;
-    padding: 30px;
+	padding: 3em 0;
+	background: #FEFEFE;
+	width: 940px;
+	margin: 0 auto;
 
 }
 
-.titulo-principal {
-
-    padding-left: 20px;
+.principal p {
+	margin: 0 0 1em;
+    font-size: 2em;
 }
 
-.titulo-centralizado {
-
-    text-align: center;
+.principal strong {
+	font-weight: bold;
 }
 
-p {
-
-    text-align: center;
+.principal em {
+	font-style: italic;
 }
 
-#missao{
+.utensilios {
+	width: 120px;
+	float: left; /* flutuar o objeto*/
+	margin: 0 20px 20px 0;
 
-    font-size: 20px;
-}
-
-
-em strong {
-
-    color: red;
-}
-
-.itens {
-
-    color: blue;
-    font-style: italic;
 }
 
 .beneficios {
 
-    background-color: #FFFFFF;
-    padding: 20px;
+    padding: 3em 0;
+	background: #888888;
+
 }
 
+.conteudo-beneficios {
 
+    width: 640px;
+    margin: 0 auto;
+}
 
-ul {
+.lista-beneficios {
 
+    width: 40%;
     display: inline-block;
     vertical-align: top;
-    width: 20%;
-    margin-right: 15%;
-    
+    font-size: 25px;
 
 }
 
-.imagembeneficios {
+.itens {
 
-    width: 50%;
+    line-height: 1.5;
+
+}
+
+.itens:before {
+
+	content: "✭";
+
+}
+
+
+.itens:first-child { /*primeiro item da lista fica em negrito (last-child, nth-child(x))*/
+
+    font-weight: bold;
+}
+
+.imagem-beneficios {
+
+	width: 60%;
+	opacity: 1; /*opacidade do elemento, vai de 1 a 0*/
+	transition: 400ms;
+}
+
+.imagem-beneficios:hover { /*opacifica quando o mouse fica em cina do elemento*/
+
+	opacity: 0.3;
+
 }
 
 footer {
@@ -76,7 +334,57 @@ footer {
 
 .copyright {
 
-    font-size: 15;
+    font-size: 25px;
     color: white;
     margin: 20px 0 0;
+
 }
+
+.mapa {
+
+    padding: 3em 0;
+	background: linear-gradient(#FEFEFE, #888888); /*pode ser colocada a inclinação também das cores e a porcentagem que queremos das cores*/
+
+}
+
+.mapa-conteudo {
+
+	width: 940px;
+	margin: 0 auto;
+
+}
+
+.mapa p {
+
+    margin: 0 0 2em;
+    text-align: center;
+    font-size: 2em;
+
+}
+
+.video {
+
+    width: 560px;
+    margin: 2em auto;
+
+}
+
+/* main > p { filhas diretas do main e não da section
+
+	so vai selecionar o paragrafo 'qualquer conteudo' da main e não os demais p
+} */
+
+/* img + p {
+
+	so vai selecionar o p que vem depois da imagem 
+} */
+
+/* img ~ p {
+
+	vai selecionar todos os p depois da imagem
+} */
+
+/* .principal p:not(#missao) { excluir o p missao
+
+	background: orange;
+} */
